infrastructure/modules/vpc/igw.tf
//Internal Gateway
resource "aws_internet_gateway" "igw" {
  vpc_id = "${aws_vpc.main_vpc.id}"
  tags = {
    Name = "${var.igw_name}"
  }
}
